--- a/VendingMachine/Resources/layout/activity_settings.axml
+++ b/VendingMachine/Resources/layout/activity_settings.axml
@@ -6,23 +6,30 @@
 	android:id="@+id/linearLayout1">
 	<TextView
 		android:text="Настройки"
-		android:textSize ="38px"
+		android:textSize ="30px"
+		android:textStyle="bold"
 		android:gravity = "center"
+		android:background="#ADD8E6"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/textView1" />
-
+		android:layout_height="wrap_content"/>
+	<ListView
+			android:layout_width="fill_parent"
+			android:layout_height="130dp"
+			android:id="@+id/listView"
+			android:background="#DCDCDC"
+			android:clickable="true"
+			android:choiceMode="singleChoice" />
 	<Button
 		android:text="Сохранить"
 		android:layout_gravity = "right"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:id="@+id/button1" />
+		android:layout_width="110dp"
+		android:layout_height="40dp"
+		android:id="@+id/buttonSave" />
 	<Button
 		android:text="Вернуться"
 		android:layout_gravity = "right"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:id="@+id/backButton" />
+		android:layout_width="110dp"
+		android:layout_height="40dp"
+		android:id="@+id/buttonBack" />
 
 </LinearLayout>
