--- a/VendingMachine/Resources/layout/drinksRow.axml
+++ b/VendingMachine/Resources/layout/drinksRow.axml
@@ -2,44 +2,48 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
-   android:background="#FFDAFF7F"
+   android:background="#DCDCDC"
    android:padding="5dp">
 
-    <LinearLayout android:id="@+id/Text"
+    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:paddingLeft="10dip"
-	  >
+       android:paddingLeft="8dip" >
 
     <TextView
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:paddingLeft="10dip"
-	android:id="@+id/textView1" />
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingLeft="8dip"
+		android:textSize="14dp"
+		android:id="@+id/textDrinkName" />
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:paddingLeft="10dip"
-		android:id="@+id/textView2" />
+		android:paddingLeft="15dip"
+		android:textSize="12dp"
+		android:id="@+id/textDrinkPrice" />
 
 	<TextView
+		android:textSize="12dp"
+		android:text ="р."	
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingLeft="3dip" />
+
+	<TextView
+		android:textSize="12dp"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:paddingLeft="10dip"
-		android:id="@+id/textView3" />
-		<Button
-			android:text="Купить"
-			android:textSize ="8dp"
-			android:layout_width="wrap_content"
-			android:layout_height="30dp"
-			android:layout_toRightOf="@id/Text"
-			android:id="@+id/button1" 
-		android:focusable="false"/>
+		android:id="@+id/textDrinkCount" />
+
+	<TextView
+		android:textSize="12dp"
+		android:text ="шт."	
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:paddingLeft="3dip" />
     </LinearLayout>
-	
-	
-
-
 </RelativeLayout >
